# Hootone-RAG

./: .env.example  .gitignore  README.md  README_api_upload.md  README_chunking_to_vectordb_test.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: auth.py  deps.py  ingest.py
app/core/: config.py  file_validation.py  rate_limit.py  security.py
app/db/: session.py
app/models/: schemas.py  user.py
app/services/: auth_service.py
data/uploads/Metadata/: PRD-1.pdf.txt  rough.pdf.txt  test-1.pdf.txt  test-2.pdf.txt  test-3.pdf.txt  test1.pdf.txt
db/postgres_data/: postmaster.pid
db/postgres_data/base/13844/: 1247  1249  1259  16395  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
db/postgres_data/base/16384/: 1247  1249  1259  16428  16430  16431  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  pg_internal.init
db/postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
db/postgres_data/pg_stat_tmp/: db_0.stat  db_13844.stat  db_16384.stat  global.stat
db/postgres_data/pg_xact/: 0000
notebook/: docker-compose.yml  embedding-demo.py  stage-2.ipynb
src/api/: main.py
src/models/: api_models.py
src/services/: db_manager.py  file_handler.py
tests/: test_api_upload.py
