[project]
name = "rag-hootone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.0",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-experimental>=0.4.0",
    "langchain-openai>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=0.2",
    "notebook>=7.5.0",
    "openai>=1.50",
    "psycopg[binary,pool]>=3.1.19",
    "pydantic>=2.7.0",
    "pymupdf>=1.26.6",
    "pytest>=8.3.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.16.1",
    "uvicorn[standard]>=0.30.0",
]
